--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.488.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
