--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "tauri": "^0.15.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.4.1",
