--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "segment"
+name = "knodiq"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "A revolutionary DAW with AudioShader feature"
+authors = ["hatya-mouse"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,7 +11,7 @@ edition = "2021"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "segment_lib"
+name = "knodiq_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
@@ -22,5 +22,6 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-segment_engine = { git = "https://github.com/Hatya-mouse/segment_engine" }
+knodiq_engine = { git = "https://github.com/Hatya-mouse/knodiq_engine" }
 tauri-plugin-dialog = "2"
+tauri-plugin-log = "2.4.0"
