Add state management for mixer, graph, and track components
- Introduced new state modules: `graph_state`, `mixer_state`, `region_state`, and `track_state` to manage application state.
- Implemented serialization and deserialization for state structures using Serde.
- Enhanced `NodeState`, `ConnectorState`, `GraphState`, `MixerState`, `RegionState`, and `TrackState` with methods to create state from existing objects.
- Updated `App` component to manage selected track state and integrate node editor functionality.
- Refactored `PaneComponent` to support track selection and node editing.
- Created new components for track area and region views to improve UI interaction.
- Updated CSS styles for better visual feedback on button states and accent colors.
- Removed deprecated `PaneView` component and consolidated pane-related types into a shared library.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,4 @@ knodiq_audio_shader = { git = "https://github.com/Hatya-mouse/knodiq_audio_shade
 tauri-plugin-dialog = "2"
 tauri-plugin-log = "2.4.0"
 tauri-plugin-os = "2"
+uuid = "1.17.0"
