--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@
 [package]
 name = "knodiq"
 version = "0.1.0"
-description = "A revolutionary DAW with AudioShader feature"
+description = "A music-making software with AudioShader feature"
 authors = ["hatya-mouse"]
 edition = "2024"
 license = "Apache-2.0"
@@ -41,6 +41,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 knodiq_engine = { git = "https://github.com/Hatya-mouse/knodiq_engine" }
 knodiq_audio_shader = { git = "https://github.com/Hatya-mouse/knodiq_audio_shader" }
+knodiq_note = { git = "https://github.com/Hatya-mouse/knodiq_note" }
 tauri-plugin-dialog = "2"
 tauri-plugin-log = "2.4.0"
 tauri-plugin-os = "2"
