--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.3",
-    "@tauri-apps/api": "^2.4.1",
-    "@tauri-apps/plugin-dialog": "~2.2.1",
-    "@tauri-apps/plugin-opener": "^2.2.6",
-    "@tauri-apps/plugin-os": "~2",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tauri-apps/api": "^2.6.0",
+    "@tauri-apps/plugin-dialog": "~2.2.2",
+    "@tauri-apps/plugin-opener": "^2.4.0",
+    "@tauri-apps/plugin-os": "~2.3.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.488.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss": "^4.1.3",
+    "tailwindcss": "^4.1.11",
     "tauri": "^0.15.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.4.1",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
-    "@vitejs/plugin-react": "^4.3.4",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "@tauri-apps/cli": "^2.6.2",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.6.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "typescript": "~5.6.3",
-    "vite": "^6.2.6",
+    "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
