--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,7 +40,7 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 knodiq_engine = { git = "https://github.com/Hatya-mouse/knodiq_engine" }
-knodiq_audio_shader = { git = "https://github.com/Hatya-mouse/knodiq_audio_shader" }
+kash = { git = "https://github.com/Hatya-mouse/kash" }
 knodiq_note = { git = "https://github.com/Hatya-mouse/knodiq_note" }
 tauri-plugin-dialog = "2"
 tauri-plugin-log = "2.4.0"
